aks/01-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: dev
spec:
  selector:
    app: auth
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: acralacancha.azurecr.io/auth:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
