aks/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: alacancha.westus.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3000
